fix dark mode bug

--- a/frontend/src/pages/cases/CasePage.css
+++ b/frontend/src/pages/cases/CasePage.css
@@ -36,8 +36,8 @@
   border: 2px solid #262626 !important;
 }
 
-.dark.react-mde .mde-preview .mde-preview-content pre {
-  background-color: inherit !important;
+.dark .mde-preview .mde-preview-content pre {
+  background-color: black !important;
 }
 
 .dark.react-mde .mde-text {
